# Artemist

./: .gitignore  BUILD_WINDOWS.md  CMakeLists.txt  README.md  build_windows.ps1  setup_windows.ps1
cmake/: FindPackages.cmake
data/: ES_futures_sample.csv
py/: generate_sample_data.py  optimise.py  read_results.py
src/: Backtester.cpp  Backtester.hpp  LockFreeQueue.hpp  MarketDataReader.cpp  MarketDataReader.hpp  Performance.cpp  Performance.hpp  RollingStatistics.cpp  RollingStatistics.hpp  SignalGenerator.cpp  SignalGenerator.hpp  main.cpp
tests/: test_ewma.cpp  test_lockfree_queue.cpp  test_market_data_reader.cpp  test_signal_generator.cpp
